# LLVM-Pass-Example

./: README.md
gal2xyPassExample-clang/gal2xyPass/: CMakeLists.txt  logPass.cpp  namePass.cpp
gal2xyPassExample-opt/: CMakeLists.txt
gal2xyPassExample-opt/gal2xyPass/: logPass.cpp  namePass.cpp
